--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,33 +1,71 @@
 .barleft{
-  width: 20%;
+  width: 200px;
   height: 800px;
   background-color: #3D4750;
   z-index: 0;
-  padding-top: 50px ;
-
+  position: absolute;
+  top: 0;
 }
+
+.barleft li {
+  color : #8C949F;
+  font-weight: 500;
+  margin: 10px;
+  font-size: 12px;
+}
+
+.category {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 body{
   background-color: beige;
   height: 1280px;
 }
-.table{
-  width: 80%;
-}
+
 .nav{
-  background-color: orange;
-  height: 50px;
+  background-color: #EBAF3D;
+  height: 68px;
   width: 100%;
-  padding-left: 10px;
-
-
 }
+
+.logo {
+  height: 68px;
+  background-color: #363d45;
+  color: white;
+  text-align: left;
+  padding-left: 33px;
+}
+
+.logo h2 {
+  font-size: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  line-height: 68px;
+  font-family: 'Intro Bold';
+}
+
 .all{
   display: flex;
+  margin-left: 200px;
+}
+
+ul
+{
+  list-style-type: none;
+  padding-left: 10%;
+  margin: 5%;
+  text-align: left;
+}
+
+hr {
+  border-color: #49515E;
+  size: 2;
 }
 
 .barright{
   width: 20%;
-  height: 800px;
   background-color: whitesmoke;
 }
 .barright ul{
@@ -38,5 +76,23 @@ body{
 .nav h2  {
   padding-left:0.1em;
   padding-bottom:0.1em;
+  color: white;
+}
+
+button {
+  margin-top: 20px;
+  background-color: transparent;
+  color: #8cb8c6;
+  border: 1px solid #8cb8c6;
+  border-radius: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  text-transform: uppercase;
+}
+
+button:hover {
+  background-color: #8cb8c6;
   color: white;
 }
